// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query Interface Should convert Aliased CTE select sql (WITH nums AS (SELECT id, numeric_col AS "num" FROM all_types)
      SELECT all_types.id, n.num FROM all_types JOIN nums AS n ON n.id = all_types.id) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "num",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "numeric",
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert Coalesce binary expression sql (SELECT COALESCE(numeric_col,0) + COALESCE(numeric_col,0) as "totalPaymentWithVat" FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "totalPaymentWithVat",
      "type": Object {
        "postgresType": "float4",
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert coalesce 1 sql (SELECT COALESCE(id, character_col) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "coalesce",
      "type": Object {
        "items": Array [
          Object {
            "comment": null,
            "postgresType": "integer",
            "type": "Number",
          },
          Object {
            "comment": null,
            "nullable": true,
            "postgresType": "character",
            "type": "String",
          },
        ],
        "nullable": false,
        "postgresType": "any",
        "type": "UnionConstant",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert coalesce 2 sql (SELECT COALESCE(character_col, id) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "coalesce",
      "type": Object {
        "items": Array [
          Object {
            "comment": null,
            "nullable": true,
            "postgresType": "character",
            "type": "String",
          },
          Object {
            "comment": null,
            "postgresType": "integer",
            "type": "Number",
          },
        ],
        "nullable": false,
        "postgresType": "any",
        "type": "UnionConstant",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert coalesce 3 sql (SELECT COALESCE(12, character_col, id) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "coalesce",
      "type": Object {
        "items": Array [
          Object {
            "literal": 12,
            "postgresType": "float4",
            "type": "Number",
          },
          Object {
            "comment": null,
            "nullable": true,
            "postgresType": "character",
            "type": "String",
          },
          Object {
            "comment": null,
            "postgresType": "integer",
            "type": "Number",
          },
        ],
        "nullable": false,
        "postgresType": "any",
        "type": "UnionConstant",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert coalesce 4 sql (SELECT COALESCE(integer_col, character_col) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "coalesce",
      "type": Object {
        "items": Array [
          Object {
            "comment": null,
            "nullable": true,
            "postgresType": "integer",
            "type": "Number",
          },
          Object {
            "comment": null,
            "nullable": true,
            "postgresType": "character",
            "type": "String",
          },
        ],
        "nullable": true,
        "postgresType": "any",
        "type": "UnionConstant",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert composite type from table sql (SELECT (item).supplier_id FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "supplier_id",
      "type": Object {
        "comment": undefined,
        "nullable": true,
        "postgresType": "integer",
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert composite type from view sql (SELECT (item).supplier_id FROM all_types_view) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "supplier_id",
      "type": Object {
        "comment": undefined,
        "nullable": true,
        "postgresType": "integer",
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert different result types sql (SELECT * FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "not_null",
      "type": Object {
        "comment": "This column should never be null",
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "default_not_null",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "bigint_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "bigint",
        "type": "BigInt",
      },
    },
    Object {
      "name": "bigserial_col",
      "type": Object {
        "comment": null,
        "postgresType": "bigint",
        "type": "BigInt",
      },
    },
    Object {
      "name": "bit_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "bit",
        "type": "String",
      },
    },
    Object {
      "name": "bit_varying_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "bit varying",
        "type": "String",
      },
    },
    Object {
      "name": "boolean_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "boolean",
        "type": "Boolean",
      },
    },
    Object {
      "name": "box_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "box",
        "type": "String",
      },
    },
    Object {
      "name": "bytea_col",
      "type": Object {
        "comment": null,
        "postgresType": "bytea",
        "type": "Buffer",
      },
    },
    Object {
      "name": "character_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character",
        "type": "String",
      },
    },
    Object {
      "name": "character_varying_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "cidr_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "cidr",
        "type": "String",
      },
    },
    Object {
      "name": "circle_col",
      "type": Object {
        "comment": null,
        "items": Array [
          Object {
            "name": "x",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
          Object {
            "name": "y",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
          Object {
            "name": "radius",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
        ],
        "postgresType": "circle",
        "type": "ObjectLiteralConstant",
      },
    },
    Object {
      "name": "date_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "date",
        "type": "Date",
      },
    },
    Object {
      "name": "double_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "double precision",
        "type": "Number",
      },
    },
    Object {
      "name": "inet_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "inet",
        "type": "String",
      },
    },
    Object {
      "name": "integer_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "interval_col",
      "type": Object {
        "comment": null,
        "items": Array [
          Object {
            "name": "years",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
          Object {
            "name": "months",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
          Object {
            "name": "days",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
          Object {
            "name": "hours",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
          Object {
            "name": "minutes",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
          Object {
            "name": "seconds",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
          Object {
            "name": "milliseconds",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
        ],
        "postgresType": "interval",
        "type": "ObjectLiteralConstant",
      },
    },
    Object {
      "name": "json_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "json",
        "type": "Json",
      },
    },
    Object {
      "name": "jsonb_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "jsonb",
        "type": "Json",
      },
    },
    Object {
      "name": "line_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "line",
        "type": "String",
      },
    },
    Object {
      "name": "lseg_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "lseg",
        "type": "String",
      },
    },
    Object {
      "name": "macaddr_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "macaddr",
        "type": "String",
      },
    },
    Object {
      "name": "money_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "money",
        "type": "String",
      },
    },
    Object {
      "name": "numeric_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "numeric",
        "type": "Number",
      },
    },
    Object {
      "name": "path_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "path",
        "type": "String",
      },
    },
    Object {
      "name": "pg_lsn_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "pg_lsn",
        "type": "String",
      },
    },
    Object {
      "name": "point_col",
      "type": Object {
        "comment": null,
        "items": Array [
          Object {
            "name": "x",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
          Object {
            "name": "y",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
        ],
        "postgresType": "point",
        "type": "ObjectLiteralConstant",
      },
    },
    Object {
      "name": "polygon_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "polygon",
        "type": "String",
      },
    },
    Object {
      "name": "real_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "real",
        "type": "Number",
      },
    },
    Object {
      "name": "smallint_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "smallint",
        "type": "Number",
      },
    },
    Object {
      "name": "smallserial_col",
      "type": Object {
        "comment": null,
        "postgresType": "smallint",
        "type": "Number",
      },
    },
    Object {
      "name": "serial_col",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "text_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "text",
        "type": "String",
      },
    },
    Object {
      "name": "time_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "time without time zone",
        "type": "String",
      },
    },
    Object {
      "name": "time_with_time_zone_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "time with time zone",
        "type": "Date",
      },
    },
    Object {
      "name": "timestamp_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "timestamp without time zone",
        "type": "Date",
      },
    },
    Object {
      "name": "timestamp_with_time_zone_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "timestamp with time zone",
        "type": "Date",
      },
    },
    Object {
      "name": "tsquery_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "tsquery",
        "type": "String",
      },
    },
    Object {
      "name": "tsvector_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "tsvector",
        "type": "String",
      },
    },
    Object {
      "name": "txid_snapshot_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "txid_snapshot",
        "type": "String",
      },
    },
    Object {
      "name": "uuid_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "uuid",
        "type": "String",
      },
    },
    Object {
      "name": "xml_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "xml",
        "type": "String",
      },
    },
    Object {
      "name": "item",
      "type": Object {
        "attributes": Object {
          "name": Object {
            "comment": undefined,
            "nullable": true,
            "postgresType": "text",
            "type": "String",
          },
          "price": Object {
            "comment": undefined,
            "nullable": true,
            "postgresType": "numeric",
            "type": "Number",
          },
          "supplier_id": Object {
            "comment": undefined,
            "nullable": true,
            "postgresType": "integer",
            "type": "Number",
          },
        },
        "name": "inventory_item",
        "postgresType": "inventory_item",
        "schema": "public",
        "type": "CompositeConstant",
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "comment": "
  This column is an enum.
  It also contains several lines:
    - line1
    - line2
",
        "items": Array [
          Object {
            "literal": "Active",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Pending",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Dispute",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Closed",
            "postgresType": "text",
            "type": "String",
          },
        ],
        "nullable": true,
        "postgresType": "account_state",
        "type": "UnionConstant",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert enum column sql (SELECT state FROM account_levelisations) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "state",
      "type": Object {
        "comment": null,
        "items": Array [
          Object {
            "literal": "Pending",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Done",
            "postgresType": "text",
            "type": "String",
          },
        ],
        "nullable": false,
        "postgresType": "account_levelisation_state",
        "type": "UnionConstant",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert enum sql (SELECT 'Pending'::account_levelisation_state) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "row",
      "type": Object {
        "items": Array [
          Object {
            "literal": "Pending",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Done",
            "postgresType": "text",
            "type": "String",
          },
        ],
        "postgresType": "account_levelisation_state",
        "type": "UnionConstant",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert function result double sql (SELECT ABS(ABS(integer_col)) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "abs",
      "type": Object {
        "comment": undefined,
        "postgresType": "double precision",
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert function result single sql (SELECT ABS(integer_col) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "abs",
      "type": Object {
        "comment": undefined,
        "postgresType": "double precision",
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert nested function explicit type sql (SELECT ARRAY_LENGTH(ARRAY_AGG(integer_col), 1)::int[] FROM all_types GROUP BY id) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "array",
      "type": Object {
        "items": Object {
          "postgresType": "int4",
          "type": "Number",
        },
        "postgresType": "int4[]",
        "type": "Array",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert nested function guess type sql (SELECT ABS(ARRAY_LENGTH(ARRAY_AGG(integer_col), 1)) FROM all_types GROUP BY id) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "abs",
      "type": Object {
        "comment": undefined,
        "postgresType": "double precision",
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert operators integer sql (SELECT integer_col + integer_col AS "test1" FROM all_types WHERE id = $id) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "postgresType": "integer",
          "type": "Number",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "test1",
      "type": Object {
        "nullable": true,
        "postgresType": "float4",
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert operators string sql (SELECT character_col + integer_col AS "test1" FROM all_types WHERE character_col = $text) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "text",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "nullable": true,
          "postgresType": "character",
          "type": "String",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "test1",
      "type": Object {
        "nullable": true,
        "postgresType": "float4",
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert parameter coalesce sql (SELECT character_col FROM all_types WHERE integer_col > COALESCE($id, 2)) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "nullable": true,
          "postgresType": "integer",
          "type": "Number",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "character_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character",
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert parameter required sql (SELECT character_col FROM all_types WHERE integer_col > $id!) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "type": Object {
        "nullable": false,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "nullable": true,
          "postgresType": "integer",
          "type": "Number",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "character_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character",
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert select where sql (SELECT character_col FROM all_types WHERE integer_col > COALESCE($id, 2)) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "nullable": true,
          "postgresType": "integer",
          "type": "Number",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "character_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character",
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert simple sql (SELECT id, character_col FROM all_types WHERE id = :id) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "postgresType": "integer",
          "type": "Number",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "character_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character",
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert sum sql (SELECT SUM(integer_col) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "sum",
      "type": Object {
        "comment": undefined,
        "postgresType": "bigint",
        "type": "BigInt",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert views types sql (SELECT * FROM all_types_view) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "not_null",
      "type": Object {
        "comment": "This column should never be null",
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "default_not_null",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "bigint_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "bigint",
        "type": "BigInt",
      },
    },
    Object {
      "name": "bigserial_col",
      "type": Object {
        "comment": null,
        "postgresType": "bigint",
        "type": "BigInt",
      },
    },
    Object {
      "name": "bit_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "bit",
        "type": "String",
      },
    },
    Object {
      "name": "bit_varying_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "bit varying",
        "type": "String",
      },
    },
    Object {
      "name": "boolean_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "boolean",
        "type": "Boolean",
      },
    },
    Object {
      "name": "box_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "box",
        "type": "String",
      },
    },
    Object {
      "name": "bytea_col",
      "type": Object {
        "comment": null,
        "postgresType": "bytea",
        "type": "Buffer",
      },
    },
    Object {
      "name": "character_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character",
        "type": "String",
      },
    },
    Object {
      "name": "character_varying_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "cidr_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "cidr",
        "type": "String",
      },
    },
    Object {
      "name": "circle_col",
      "type": Object {
        "comment": null,
        "items": Array [
          Object {
            "name": "x",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
          Object {
            "name": "y",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
          Object {
            "name": "radius",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
        ],
        "postgresType": "circle",
        "type": "ObjectLiteralConstant",
      },
    },
    Object {
      "name": "date_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "date",
        "type": "Date",
      },
    },
    Object {
      "name": "double_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "double precision",
        "type": "Number",
      },
    },
    Object {
      "name": "inet_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "inet",
        "type": "String",
      },
    },
    Object {
      "name": "integer_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "interval_col",
      "type": Object {
        "comment": null,
        "items": Array [
          Object {
            "name": "years",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
          Object {
            "name": "months",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
          Object {
            "name": "days",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
          Object {
            "name": "hours",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
          Object {
            "name": "minutes",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
          Object {
            "name": "seconds",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
          Object {
            "name": "milliseconds",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
        ],
        "postgresType": "interval",
        "type": "ObjectLiteralConstant",
      },
    },
    Object {
      "name": "json_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "json",
        "type": "Json",
      },
    },
    Object {
      "name": "jsonb_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "jsonb",
        "type": "Json",
      },
    },
    Object {
      "name": "line_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "line",
        "type": "String",
      },
    },
    Object {
      "name": "lseg_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "lseg",
        "type": "String",
      },
    },
    Object {
      "name": "macaddr_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "macaddr",
        "type": "String",
      },
    },
    Object {
      "name": "money_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "money",
        "type": "String",
      },
    },
    Object {
      "name": "numeric_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "numeric",
        "type": "Number",
      },
    },
    Object {
      "name": "path_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "path",
        "type": "String",
      },
    },
    Object {
      "name": "pg_lsn_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "pg_lsn",
        "type": "String",
      },
    },
    Object {
      "name": "point_col",
      "type": Object {
        "comment": null,
        "items": Array [
          Object {
            "name": "x",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
          Object {
            "name": "y",
            "type": Object {
              "postgresType": "float4",
              "type": "Number",
            },
          },
        ],
        "postgresType": "point",
        "type": "ObjectLiteralConstant",
      },
    },
    Object {
      "name": "polygon_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "polygon",
        "type": "String",
      },
    },
    Object {
      "name": "real_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "real",
        "type": "Number",
      },
    },
    Object {
      "name": "smallint_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "smallint",
        "type": "Number",
      },
    },
    Object {
      "name": "smallserial_col",
      "type": Object {
        "comment": null,
        "postgresType": "smallint",
        "type": "Number",
      },
    },
    Object {
      "name": "serial_col",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "text_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "text",
        "type": "String",
      },
    },
    Object {
      "name": "time_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "time without time zone",
        "type": "String",
      },
    },
    Object {
      "name": "time_with_time_zone_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "time with time zone",
        "type": "Date",
      },
    },
    Object {
      "name": "timestamp_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "timestamp without time zone",
        "type": "Date",
      },
    },
    Object {
      "name": "timestamp_with_time_zone_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "timestamp with time zone",
        "type": "Date",
      },
    },
    Object {
      "name": "tsquery_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "tsquery",
        "type": "String",
      },
    },
    Object {
      "name": "tsvector_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "tsvector",
        "type": "String",
      },
    },
    Object {
      "name": "txid_snapshot_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "txid_snapshot",
        "type": "String",
      },
    },
    Object {
      "name": "uuid_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "uuid",
        "type": "String",
      },
    },
    Object {
      "name": "xml_col",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "xml",
        "type": "String",
      },
    },
    Object {
      "name": "item",
      "type": Object {
        "attributes": Object {
          "name": Object {
            "comment": undefined,
            "nullable": true,
            "postgresType": "text",
            "type": "String",
          },
          "price": Object {
            "comment": undefined,
            "nullable": true,
            "postgresType": "numeric",
            "type": "Number",
          },
          "supplier_id": Object {
            "comment": undefined,
            "nullable": true,
            "postgresType": "integer",
            "type": "Number",
          },
        },
        "name": "inventory_item",
        "postgresType": "inventory_item",
        "schema": "public",
        "type": "CompositeConstant",
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "comment": "
  This column is an enum.
  It also contains several lines:
    - line1
    - line2
",
        "items": Array [
          Object {
            "literal": "Active",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Pending",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Dispute",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Closed",
            "postgresType": "text",
            "type": "String",
          },
        ],
        "nullable": true,
        "postgresType": "account_state",
        "type": "UnionConstant",
      },
    },
  ],
}
`;
